# opsys-ush

./: .gitignore  CMakeLists.txt  Makefile  builtin.c  builtin.h  commands.c  commands.h  history.c  history.h  linked_list.c  linked_list.h  ls.c  ls.h  main.c  parse_commands.c  parse_commands.h  pipe_commands.c  pipe_commands.h  utility.c  utility.h
